--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
   height: 100vh;
   width: 35vw;
   background-image: url(photo-1585202900225-6d3ac20a6962.webp);
-  object-fit: contain;
   background-size: cover;
 }
 
@@ -64,7 +63,7 @@ body {
   margin-bottom: 1rem;
 }
 
-.sign-up-form form {
+.sign-up-form .la7dhabarka {
   font-size: 1rem;
   background-color: white;
   box-sizing: border-box;
@@ -90,23 +89,27 @@ label {
 }
 
 .sign-up-form input {
-  color: var(--input-color);
-  width: 16rem;
+  color: black;
+  padding-left: 8px;
+  width: 100%;
   height: 1.5rem;
   margin-bottom: 1rem;
-  border: 1px solid var(--input-color);
+  border: 2px solid var(--input-color);
   border-radius: 5px;
+}
+
+input:focus {
+  outline: none;
 }
 
 button {
   background-color: var(--createaccount-btn-color);
   border-radius: 5px;
-  box-sizing: border-box;
-  margin: 3rem;
-  margin-bottom: 0;
+  margin: 1.5rem 0 1.5rem 3rem;
   padding: 0.8rem;
-  width: 15rem;
+  width: 13rem;
   font-size: 1rem;
+  font-weight: 500;
   color: white;
   border: none;
 }
@@ -119,8 +122,97 @@ span {
   color: var(--createaccount-btn-color);
 }
 
-button + p {
+#login {
   margin: 0;
+  margin-left: 3rem;
   padding: 0;
   font-size: 1rem;
+}
+
+h6 {
+  position: relative;
+  color: #c00;
+  left: 5px;
+  top: -20px;
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
+}
+
+.error {
+  border: 1px solid red;
+}
+
+input:valid:focus:not(:placeholder-shown) {
+  border-color: green;
+}
+
+input:valid:not(:placeholder-shown) {
+  border-color: green;
+}
+
+input:invalid:focus:not(:placeholder-shown) {
+  border-color: red;
+}
+
+input:invalid:not(:focus):not(:placeholder-shown) {
+  border-color: red;
+}
+
+@media screen and (max-width: 850px) {
+  body {
+    flex-direction: column;
+  }
+
+  .image-sidebar {
+    position: relative;
+    width: 100vw;
+    height: 50vh;
+    background-image: url(photo-1585202900225-6d3ac20a6962.webp);
+    background-size: cover;
+  }
+
+  .logo {
+    box-sizing: border-box;
+    position: absolute;
+    top: 15vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100vw;
+    height: 20vh;
+  }
+
+  .sign-up-form {
+    height: auto;
+    width: 100vw;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    text-align: center;
+  }
+
+  .sign-up-form .la7dhabarka {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 16px;
+  }
+
+  form .form-style {
+    display: flex;
+    flex-direction: column;
+    gap: 0rem;
+  }
+
+  button {
+    margin: 1rem 0;
+  }
+
+  #login {
+    margin-left: 0;
+  }
 }
